Revert "depool esams"
This reverts commit 31b8456199cfc9557922fd0c5ce48e9a6d199aae.

Change-Id: Ie8b56550176941e67747d863f557552e76e10865

--- a/config
+++ b/config
@@ -27,8 +27,8 @@ plugins => {
             ## Choose just one of the two "geo-maps" below, and comment out the
             ## other, used as a special operational case for depooling esams
             ## without overloading eqiad:
-            #$include{geo-maps}, # default
-            $include{geo-maps-esams-offline}, # esams depool + US shift towards codfw
+            $include{geo-maps}, # default
+            # $include{geo-maps-esams-offline}, # esams depool + US shift towards codfw
 
             ## DNS Discovery map, unrelated to the above:
             $include{discovery-map},
