tox: Support DNS_INCLUDE_DIR and generated DNS
This change adds plumbing to tox and deploy-check.py to either
use a pre-arranged checkout of the new generated DNS entries from
netbox, or to create a new temporary one and insert it into the
generated zones tree.

Bug: T243362
Change-Id: Ia9eefdebf44d4c9ceb6302590453b79f0f3191c4

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ envdir =
     py37: {toxworkdir}/py37-tests
 commands =
     flake8: flake8 utils
-    zones: python {toxinidir}/utils/deploy-check.py {posargs}
+    zones: python {toxinidir}/utils/deploy-check.py -g {env:DNS_INCLUDE_DIR:''} {posargs}
 deps =
     flake8
     gitpython
