geodns: remove geo-maps-esams-offline hack
This hack redistributed much of the normal eqiad load towards
codfw and ulsfo when esams went offline, because otherwise eqiad
would be overwhelmed by the failover traffic from esams.  We now
have the capability to fail over traffic to drmrs in this case
(coming in the next patch), so we can remove this awful exception
case.

Bug: T304089
Change-Id: I7585056c45937d45c2d284bd73315619fee9d033

--- a/config
+++ b/config
@@ -24,12 +24,8 @@ plugins => {
     geoip => {
         undefined_datacenters_ok = true,
         maps => {
-            ## Choose just one of the two "geo-maps" below, and comment out the
-            ## other, used as a special operational case for depooling esams
-            ## without overloading eqiad:
-            $include{geo-maps}, # default
-            # $include{geo-maps-esams-offline}, # esams depool + US shift towards codfw
-
+            ## Primary map for public services
+            $include{geo-maps},
             ## DNS Discovery map, unrelated to the above:
             $include{discovery-map},
         },
