--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 2.5.0
-envlist = py{39,311}-{flake8,zones}
+envlist = py{39,311}-{flake8,zones,type65}
 skip_missing_interpreters = True
 skipsdist = True
 
@@ -11,12 +11,14 @@ description =
     py39: (Python 3.9)
     py311: (Python 3.11)
     zones: Validate the generated zone files
+    type65: Runs doctest for the type65 script
 envdir =
     py39: {toxworkdir}/py39-tests
     py311: {toxworkdir}/py311-tests
 commands =
     flake8: flake8 utils
     zones: python {toxinidir}/utils/deploy-check.py -g {env:DNS_INCLUDE_DIR:''} {posargs}
+    type65: python {toxinidir}/utils/type65.py -p 0
 deps =
     flake8
     gitpython
